<resources>
    <string name="app_name">KotlinApp</string>
    <string name="home">Home</string>
    <string name="activity">Activity</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">REGISTER</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
</resources>